[package]
name = "rust-gate"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.3.2"  
reqwest = { version = "0.11", features = ["blocking"] }
uuid = { version = "1.8.0", features = ["v4", "fast-rng", "macro-diagnostics" ]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"